2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of skeleton_constrained.

	* scribo/estim/components_features.hh,
	* scribo/estim/internal/compute_skeleton.hh: Here.

2011-05-12  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Update support for PAGE XML format.

	* scribo/core/tag/line.hh: Add operator<<.

	* scribo/io/xml/internal/compute_text_colour.hh: Update color
	names.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh,
	* scribo/io/xml/internal/print_box_coords.hh,
	* scribo/io/xml/internal/print_page_preambule.hh: Update in order
	to produce PAGE compatible XML files.

2011-05-11  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Small fixes in Scribo.

	* scribo/primitive/extract/lines_pattern.hh: Fix missing include.

	* scribo/primitive/extract/non_text.hh: Change debug level for
	debug image.

	* src/primitive/extract/alignments.cc: Improve comment.

2011-05-06  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Load and save color information.

	* scribo/io/xml/internal/compute_text_colour.hh: New.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/load.hh: Load and save color as hex format.

2011-05-06  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	* scribo/text/paragraphs.hh: Remove unused argument.

2011-05-06  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Fix namespace ambiguities.

	* scribo/binarization/internal/first_pass_functor.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/canvas/integral_browsing.hh,
	* scribo/convert/to_base64.hh,
	* scribo/preprocessing/denoise_bg.hh: Here.

2011-05-06  Guillaume Lazzara  <lazzara@lrde.epita.fr>

	Improve PDF output.

	* demo/xml2doc/image_crop.cc: Cleanup temporary files.

	* demo/xml2doc/templates/pdf/line.xsl: Use paragraph
	information. Take color into account.
